# Yifang

./: .env.example  README.md  main.py  pyproject.toml
docs/: ARCHITECTURE.md  PHILOSOPHY.md
src/yifang/: __init__.py  config.py  core.py
src/yifang/meeting/: __init__.py  auditor.py  challenger.py  controller.py  debug.py  prompts.py  protocol.py  secretary.py
src/yifang/meeting/experts/: __init__.py  common_sense.py  ethics_advisor.py  generalist.py  risk_officer.py
tests/: conftest.py  test_core.py  test_meeting.py
